infrastructure/03-apps/nightingale/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nightingale
  namespace: nightingale
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  rules:
    - host: karaoke.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nightingale
                port:
                  number: 80
  tls:
    - hosts:
        - karaoke.foobarbaz.fr
      secretName: nightingale-tls
