infrastructure/03-apps/nightingale/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: nightingale-isolation
  namespace: nightingale
spec:
  endpointSelector:
    matchLabels:
      app: nightingale
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/name": traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": navidrome
            "k8s:app": navidrome
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
    - toFQDNs:
        - matchName: "johnvansickle.com"
        - matchName: "github.com"
        - matchName: "api.github.com"
        - matchName: "release-assets.githubusercontent.com"
        - matchName: "objects.githubusercontent.com"
        - matchName: "pypi.org"
        - matchName: "files.pythonhosted.org"
        - matchName: "download.pytorch.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
